# goofing-off

./: .envrc  .gitignore  README.md  flake.nix  goofing-off.cabal
mosconi-sim/: Main.hs
mosconi-sim-plots/: Features.hs  Main.hs
src/mosconi-sim/: Match.hs  ScheduleGen.hs  Sim.hs
src/mosconi-sim-models/: Match.hs  Results.hs
src/mosconi-sim/Sim/: IO.hs
src/plotting-survey/: ExampleData.hs
src/plotting-survey/PlotSurvey/: BonjourHVega.hs  Scatter.hs  ScatterConfig.hs
