cabal-version:   3.0
name:            goofing-off
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          James Santucci
maintainer:      james.santucci@gmail.com
copyright:       2024
category:        Game
build-type:      Simple

common warnings
        ghc-options: -Wall

library mosconi-sim-lib
        import:           warnings
        exposed-modules:
                Match
                Sim
                Sim.IO
        
        build-depends:
                base         ^>=4.20
                , aeson
                , containers
                , lens
                , random
                , text
                , transformers
        
        hs-source-dirs:   src/mosconi-sim
        default-language: Haskell2010

executable mosconi-sim
        import:           warnings
        main-is:          Main.hs
        
        -- other-modules:
        -- other-extensions:
        build-depends:
                , mosconi-sim-lib
                , base                  ^>=4.20
                , optparse-applicative
                , random
                , transformers
        
        hs-source-dirs:   mosconi-sim
        default-language: Haskell2010

