cabal-version:   3.0
name:            goofing-off
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          James Santucci
maintainer:      james.santucci@gmail.com
copyright:       2024
category:        Game
build-type:      Simple

common warnings
        ghc-options: -Wall
        default-language: Haskell2010

library mosconi-sim-lib
        import:           warnings
        exposed-modules:
                ScheduleGen
                Sim
                Sim.IO
        
        build-depends:
                base         ^>=4.20
                , aeson
                , containers
                , lens
                , mosconi-sim-models
                , random
                , text
                , transformers
        
        hs-source-dirs:   src/mosconi-sim
        default-language: Haskell2010

library mosconi-sim-models
        import:           warnings
        exposed-modules:
                Match
                Results
        
        build-depends:
                base         ^>=4.20
                , aeson
                , containers
                , text
        
        hs-source-dirs:   src/mosconi-sim-models
        default-language: Haskell2010

executable mosconi-sim-plots
        import:           warnings
        main-is:          Main.hs
        other-modules:
          Features
        -- other-extensions:
        build-depends:
                , aeson
                , base                  ^>=4.20
                , dataframe
                , mosconi-sim-models
                , optparse-applicative
                , text
        hs-source-dirs:   mosconi-sim-plots

executable mosconi-sim
        import:           warnings
        main-is:          Main.hs
        
        -- other-modules:
        -- other-extensions:
        build-depends:
                , mosconi-sim-lib
                , mosconi-sim-models
                , base                  ^>=4.20
                , optparse-applicative
                , random
                , transformers
        
        hs-source-dirs:   mosconi-sim
        default-language: Haskell2010

library plotting-survey
        import:           warnings
        exposed-modules:
          ExampleData
          PlotSurvey.Scatter
          PlotSurvey.ScatterConfig
          PlotSurvey.BonjourHVega

        build-depends:
                base         ^>=4.20
                , transformers
                , chart-svg
                , Chart-cairo
                , Chart
                , dataframe
                , granite
                , hvega
                -- for chart-svg
                , optics-core
                , random
                , text
                , raw-strings-qq

        hs-source-dirs:   src/plotting-survey
        default-language: Haskell2010
